# precios-carburantes

./: .gitignore  Cargo.toml  gen_ca.sh  gen_client_cert.sh  public.env  send.sh  service.config.json  xcompile.sh
database-access/: Cargo.toml
database-access/src/: lib.rs
downloader/: Cargo.toml
downloader/src/: main.rs
service/: Cargo.toml  build.rs
service/src/: api.rs  auth.rs  config.rs  error.rs  files.rs  main.rs
service/src/api/: geo.rs  route.rs  user.rs
service/src/files/: dynamic_load.rs  static_load.rs
service/src/static/css/: dashboard.css  map.css
service/src/static/dashboard/: index.html
service/src/static/data/: logos.json
service/src/static/js/: api.js  dashboard.js  filter.js  logos.js  map.js  schedules.js  visible_stations.js
service/src/static/map/: index.html
src/: main.rs  migrations.rs
systemd/: carburantes.path  carburantes.service  downloader.service  downloader.timer
