[package]
name = "precios-carburantes"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.13.2", features = ["blocking", "json", "native-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusqlite = { version = "0.38.0", features = ["bundled"] }
chrono = { version = "0.4.44"}
