[package]
name = "service"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.50.0", features = ["rt-multi-thread", "macros", "fs"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
rusqlite = { version = "0.39.0", features = ["bundled"] }
database-access = { path = "../database-access" }
r2d2_sqlite = "0.33.0"
r2d2 = "0.8.10"
include_dir = {version = "0.7.4", optional = true}
mime_guess = "2.0.5"
serde_json = "1.0.149"
chrono = {version = "0.4.44", features = ["serde"]}
# moka = { version = "0.12.15", features = ["future"] }
reqwest = { version = "0.13.2", features = ["json"] }
polyline = "0.11.0"
geo-types = "0.7.18"
thiserror = "2.0.18"

[features]
include-static = ["dep:include_dir"]
